# diesel_3223_repro

./: .gitignore  .rustfmt.toml  README.md
compile_time_test/: Cargo.toml
compile_time_test/src/: bodies.rs  lib.rs
compile_time_test_schema/: Cargo.toml
compile_time_test_schema/src/: lib.rs
