[package]
name = "compile_time_test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.0-rc.0", features = ["postgres", "64-column-tables"] }
compile_time_test_schema = { path = "../compile_time_test_schema" }
